--- a/Fix My Street/AndroidManifest.xml
+++ b/Fix My Street/AndroidManifest.xml
@@ -11,7 +11,7 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 
 	<application android:icon="@drawable/house_icon"
-		android:label="Fix My Street" android:debuggable="false">
+		android:debuggable="false" android:label="FiksGataMi">
 
 		<!-- Main screen -->
 		<activity android:name=".Home" android:label="@string/app_name"
@@ -24,7 +24,7 @@
 
 
 		<!-- Details page -->
-		<activity android:name=".Details" android:label="Fix My Street - Add details"
+		<activity android:name=".Details" android:label="FiksGataMi - legg til detaljer"
 			android:theme="@style/Theme.Filler">
 			<intent-filter>
 				<action android:name="android.intent.action.DETAILS" />
@@ -33,7 +33,7 @@
 		</activity>
 
 		<!-- Success page -->
-		<activity android:name=".Success" android:label="Fix My Street - Success"
+		<activity android:name=".Success" android:label="FiksGataMi - Suksess"
 			android:theme="@style/Theme.Filler">
 			<intent-filter>
 				<action android:name="android.intent.action.SUCCESS" />
@@ -42,7 +42,7 @@
 		</activity>
 
 		<!-- About page -->
-		<activity android:name=".About" android:label="Fix My Street - About"
+		<activity android:name=".About" android:label="FiksGataMi - Om"
 			android:theme="@style/Theme.Filler">
 			<intent-filter>
 				<action android:name="android.intent.action.ABOUT" />
@@ -51,7 +51,7 @@
 		</activity>
 
 		<!-- Help page -->
-		<activity android:name=".Help" android:label="Fix My Street - Help"
+		<activity android:name=".Help" android:label="FiksGataMi - Hjelp"
 			android:theme="@style/Theme.Filler">
 			<intent-filter>
 				<action android:name="android.intent.action.HELP" />
