--- a/Fix My Street/AndroidManifest.xml
+++ b/Fix My Street/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 	<!-- version info etc -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="com.android.fiksgatami" android:versionCode="20" android:versionName="1.40">
+	package="no.fiksgatami" android:versionCode="25" android:versionName="1.5">
 
 <uses-sdk android:minSdkVersion="4" />
 	<!-- Permissions -->
