--- a/Fix My Street/AndroidManifest.xml
+++ b/Fix My Street/AndroidManifest.xml
@@ -10,53 +10,19 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 
 	<application android:icon="@drawable/house_icon"
-		android:debuggable="false" android:label="FiksGataMi">
+		android:debuggable="false" android:label="@string/app_name">
 
-		<!-- Main screen -->
-		<activity android:name=".Home" android:label="@string/app_name"
-		android:theme="@style/Theme.Filler">
+		<activity android:name=".activities.Home" android:label="@string/app_name"	android:theme="@style/Theme.Filler">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
 
-
-		<!-- Details page -->
-		<activity android:name=".Details" android:label="FiksGataMi - legg til detaljer"
-			android:theme="@style/Theme.Filler">
-			<intent-filter>
-				<action android:name="android.intent.action.DETAILS" />
-				<category android:name="android.intent.category.DEFAULT" />
-			</intent-filter>
-		</activity>
-
-		<!-- Success page -->
-		<activity android:name=".Success" android:label="FiksGataMi - Suksess"
-			android:theme="@style/Theme.Filler">
-			<intent-filter>
-				<action android:name="android.intent.action.SUCCESS" />
-				<category android:name="android.intent.category.DEFAULT" />
-			</intent-filter>
-		</activity>
-
-		<!-- About page -->
-		<activity android:name=".About" android:label="FiksGataMi - Om"
-			android:theme="@style/Theme.Filler">
-			<intent-filter>
-				<action android:name="android.intent.action.ABOUT" />
-				<category android:name="android.intent.category.DEFAULT" />
-			</intent-filter>
-		</activity>
-
-		<!-- Help page -->
-		<activity android:name=".Help" android:label="FiksGataMi - Hjelp"
-			android:theme="@style/Theme.Filler">
-			<intent-filter>
-				<action android:name="android.intent.action.HELP" />
-				<category android:name="android.intent.category.DEFAULT" />
-			</intent-filter>
-		</activity>
+		<activity android:name=".activities.Details" android:label="@string/activity_details" android:theme="@style/Theme.Filler" />
+		<activity android:name=".activities.Success" android:label="@string/activity_success" android:theme="@style/Theme.Filler" />
+		<activity android:name=".activities.About" android:label="@string/activity_about" android:theme="@style/Theme.Filler" />
+		<activity android:name=".activities.Help" android:label="@string/activity_help" android:theme="@style/Theme.Filler" />
 
 	</application>
 </manifest> 
