--- a/Fix My Street/AndroidManifest.xml
+++ b/Fix My Street/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 	<!-- version info etc -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="no.fiksgatami" android:versionCode="26" android:versionName="1.5.1">
+	package="no.fiksgatami" android:versionCode="27" android:versionName="1.5.2" 
+	android:installLocation="auto">
 
 <uses-sdk android:minSdkVersion="4" />
 	<!-- Permissions -->
